--- a/src/assets/styles/Projects.scss
+++ b/src/assets/styles/Projects.scss
@@ -7,6 +7,7 @@
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 24px;
     flex-direction: column;
+    margin-bottom: 80px
   }
   
   #titleProject {
@@ -18,78 +19,68 @@
   
   .card {
     position: relative;
-    border-radius: 16px;
+    border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     background: #fff;
-    border: #AD974F solid 2.3px;
+    border: gray solid 2px;
     overflow: hidden;
     transition: box-shadow 0.4s ease-in-out;
-  
+    
     &:hover {
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-    }
-  
-    a {
-      display: inline-flex;
-      align-items: center;
-      text-decoration: none;
-      color: #AD974F;
-      transition: 0.6s;
-  
-      &:hover {
-        font-weight: bold;
-        transition: 0.6s;
+      border: #AD974F solid 2.5px;
+
+      .cardContent h2 {
+        color: #AD974F;
       }
     }
-  
-    img {
-      max-width: 100%;
-      transform-origin: center;
-      transform: scale(1.001);
-      transition: transform 0.4s ease-in-out;
-  
-      &:hover {
-        transform: scale(1.1);
-      }
-    }
-  
-    .icon {
-      min-width: 24px;
-      width: 24px;
-      height: 24px;
-      margin-left: 5px;
-      transform: translateX(-20px);
-      opacity: 0;
-      transition: transform 0.3s, opacity 0.3s;
-  
-      &:hover {
-        transform: translateX(0);
-        opacity: 1;
+
+    figure {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+
+      img {
+        max-width: 100%;
+        transform-origin: center;
+        transform: scale(1.001);
+        transition: transform 0.4s ease-in-out;
+    
+        &:hover {
+          transform: scale(1.1);
+        }
       }
     }
   
     .cardContent {
+      display: flex;
+      flex-direction: column;
       margin-top: 10px;
       padding: 2px 24px 24px;
   
       h2 {
         margin: 0 0 18px 0;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         letter-spacing: 0.03em;
         color: black;
         transition: color 0.3s ease-out;
         font-weight: bold;
-  
-        &:hover {
-          color: #AD974F;
+        text-align: center;
         }
+
+        .container-icons{
+          display: flex;
+          justify-content: space-evenly;
+
+          img{
+            width: 35px;
+            transform: scale(1.001);
+            transition: transform 0.4s ease-in-out;
+
+            &:hover{
+              transform: scale(1.3);
+            }
+          }
       }
-    }
-  
-    figure {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
     }
   }
   
