The responsive styles and the about content was updated

--- a/src/assets/styles/Footer.scss
+++ b/src/assets/styles/Footer.scss
@@ -67,8 +67,8 @@ footer {
 @media screen and (max-width: 768px) {
 
     footer {
-        width: 85%;
-        margin: 30px auto 0;
+        width: 100%;
+        margin:  auto;
         padding: 0;
     }
 }
