--- a/src/assets/styles/AboutMe.scss
+++ b/src/assets/styles/AboutMe.scss
@@ -70,12 +70,14 @@
       display: flex;
       flex-direction: column-reverse;
       width: 100%;
+      justify-content: center;
     }
   
     .infoPrincipal {
-      width: 100%;
-      margin: 15px 0 0;
+      width: 62% !important;
       padding: 0;
+      justify-content: center;
+      margin: auto;
     }
   
     .photoPrincipal {
